# agentcontract-py

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/agentcontract/: __init__.py  audit.py  cli.py  enforce.py  exceptions.py  loader.py  models.py  runner.py
src/agentcontract/validators/: __init__.py  base.py  cost.py  latency.py  llm.py  outcome.py  pattern.py  schema.py
tests/: test_contract.py  test_enforce.py  test_outcomes.py  test_validators.py
